# pillar

./: .gitignore  Cargo.toml  Readme.md  SPEC.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: advanced.html  cookbook.html  getting-started.html  index.html  reference.html
docs/assets/: pillar.css  pillar.js
example_app/: main.py  pillar.toml
example_app/core/: config.py  database.py  security.py
example_app/domains/billing/: repository.py  router.py  schemas.py  service.py
example_app/domains/users/: repository.py  router.py  schemas.py  service.py
pillar/: __init__.py  admin.py  ai.py  ai_tools.py  app.py  auth.py  config.py  controller.py  dashboard.py  di.py  exceptions.py  metrics.py  middleware.py  openapi.py  realtime.py  responses.py  router.py  security.py  telemetry.py  tracer.py  vector.py
pillar/architecture/: __init__.py  enforcer.py
pillar/cli/: main.py
pillar/db/: async_db.py  database.py  rls.py  sync.py
pillar/queue/: __init__.py  decorators.py  storage.py  worker.py
scripts/: bump_version.py
src/: lib.rs
tests/: conftest.py  test_architecture.py  test_di.py  test_queue.py  test_router.py
