[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pillar-framework"
version = "0.1.0"
description = "Production-Grade Python Backend Framework with an optional Rust engine"
readme = "Readme.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["web", "framework", "async", "rest", "api", "rust", "pillar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "starlette>=0.37.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    "click>=8.1.0",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "maturin>=1.0",
]
async = [
    "aiosqlite>=0.19",
]
realtime = [
    "redis>=5.0",
]
otel = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]
otel-http = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
ai = [
    "httpx>=0.27",
]
jwt = [
    "python-jose[cryptography]>=3.3",
]
qdrant = [
    "qdrant-client>=1.7",
]
postgres = [
    "asyncpg>=0.29",
]
redis = [
    "redis>=5.0",
]
all = [
    "pillar-framework[otel,ai,jwt,qdrant,async,realtime]",
    "httpx>=0.27",
]

[project.scripts]
pillar = "pillar.cli.main:cli"

[project.urls]
Homepage   = "https://github.com/Zecrari/pillar"
Repository = "https://github.com/Zecrari/pillar"
Issues     = "https://github.com/Zecrari/pillar/issues"

[tool.setuptools.packages.find]
include = ["pillar*"]
exclude = ["tests*", "example_app*", "docs*", "src*"]

[tool.setuptools.package-data]
"pillar" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

# ──────────────────────────────────────────────────────────────────────
# Maturin config — only used when compiling the optional Rust engine.
# Run: maturin develop  (dev)  or  maturin build --release  (prod)
# The compiled _pillar_engine.pyd is auto-detected at runtime; the
# framework falls back to pure-Python if it is absent.
# ──────────────────────────────────────────────────────────────────────
[tool.maturin]
features         = ["pyo3/extension-module"]
python-packages  = ["pillar"]
module-name      = "_pillar_engine"
